# parser_test

./: .env.example  .gitignore  README.md  atb_parser.py  catalog_normalization.py  cross_store_matcher.py  debug_categories.json  init_db.sql  migrate_discount.py  pyproject.toml  queries.sql  requirements.txt  scratch_test.py  silpo_api_parser.py  sync_atb_catalog.py  sync_silpo_catalog.py  test_connection.py  unified_catalog.py
.github/workflows/: atb-parser.yml  silpo-parser.yml
api/: index.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  store.js
shopping_agent/: __init__.py  config.py  intent.py  llm.py  main.py  repository.py  schemas.py  service.py  tts.py
shopping_agent/static/: .gitkeep
